# jaxchat

./: .gitignore  README.md  TODO.md  ablation_notes.md  arch_test.py  basics.py  config.py  dev.md  gpt.py  inference.py  model.py  pretrainingbench.md  program.md  pyproject.toml  requirements.txt  scaling.md  train.py  train.sh
data/: cached_fineweb.py  data_curation.py  retokenize_bins.py
dev/: build_fineweb_pool.py  build_sft_mix.py  diag_backend_bisect.py  diag_bigram_proof.py  diag_causality.py  diag_index_bug.py  diag_pad_vs_unpad.py  gen_sanity_0p5b.py  smoke_base_0p5b.py  smoke_chat_0p5b.py  synth_gsm8k.py  synth_midtrain.py  synth_smoltalk.py
docs/: dev.md
jaxchat/: __init__.py  checkpoint.py  data_mixer.py  engine.py  fa3.py  model.py  optimizer.py  presets.py  report.py  schedules.py  token_features.py  tokenizer.py  tools.py  train_base.py  wandb_log.py
jobs/: speedrun.sh  train_base.sh
runs/: chat_server_1gpu.sh  chat_server_sota.sh  chinchilla_fit_plots.sh  h100_d4.sh  h100_pretrainingbench.sh  rtx_124m_ablation.sh  rtx_8gpu_0p56b_full.sh  rtx_8gpu_0p5b_base_chinchilla.sh  rtx_8gpu_0p5b_e2e.sh  rtx_8gpu_0p5b_mathsft_rl.sh  rtx_8gpu_0p5b_rl_chinchilla.sh  rtx_8gpu_0p5b_sft_smoltalk.sh  rtx_8gpu_124m.sh  rtx_8gpu_124m_base.sh  rtx_8gpu_124m_depth12_long.sh  rtx_8gpu_124m_depth16_e2e.sh  rtx_8gpu_124m_depth16_long.sh  rtx_8gpu_124m_modern.sh  rtx_8gpu_124m_modern_long.sh  rtx_8gpu_124m_stable.sh  rtx_8gpu_chinchilla_core1000_eval.sh  rtx_8gpu_chinchilla_isoflop.sh  rtx_d4.sh  rtx_diag_0p5b.sh  rtx_diag_bigram.sh  rtx_diag_bisect.sh  rtx_diag_index.sh  (+6 more)
(+36 files in other folders)
