[project]
name = "jaxchat"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jax[cuda12]>=0.4.25",
    "flax>=0.9.0",
    "optax>=0.2.2",
    "orbax-checkpoint>=0.6.0",
    "tiktoken>=0.6.0",
    "datasets>=2.18.0",
    "gradio>=4.25.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
]

[tool.uv]
extra-index-url = ["https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"]
package = false
